--- a/Example/SHWNLSClientSDK/Base.lproj/Main.storyboard
+++ b/Example/SHWNLSClientSDK/Base.lproj/Main.storyboard
@@ -1,31 +1,105 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="whP-gf-Uak">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES" initialViewController="whP-gf-Uak">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="wQg-tq-qST">
             <objects>
-                <viewController id="whP-gf-Uak" customClass="SHWViewController" sceneMemberID="viewController">
+                <viewController id="whP-gf-Uak" customClass="SHWNLSViewController" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="uEw-UM-LJ8"/>
-                        <viewControllerLayoutGuide type="bottom" id="Mvr-aV-6Um"/>
+                        <viewControllerLayoutGuide type="top" id="DBc-hb-vU6"/>
+                        <viewControllerLayoutGuide type="bottom" id="mgq-f2-1Qr"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="TpU-gO-2f1">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="jNc-Eg-Ego">
+                                <rect key="frame" x="16" y="40" width="343" height="267"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <string key="text">This ASR is used for speech search, so the limitation is 15s, for sdk, speech longer than 15s will be cut in 15s no matter  "Stop ASR" button is clicked or not. This demo didn't show this.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IjG-8S-6tU">
+                                <rect key="frame" x="56" y="427" width="30" height="30"/>
+                                <state key="normal" title="TTS"/>
+                                <connections>
+                                    <action selector="ttsRequest:" destination="whP-gf-Uak" eventType="touchUpInside" id="9wi-ot-tuG"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZU0-yc-OLB" userLabel="Cancel">
+                                <rect key="frame" x="231" y="427" width="48" height="30"/>
+                                <state key="normal" title="Cancel"/>
+                                <connections>
+                                    <action selector="cancelClicked:" destination="whP-gf-Uak" eventType="touchUpInside" id="TZM-fS-Vgi"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gPw-LM-Qcp">
+                                <rect key="frame" x="126" y="427" width="65" height="30"/>
+                                <state key="normal" title="Stop ASR"/>
+                                <connections>
+                                    <action selector="stopASRClicked:" destination="whP-gf-Uak" eventType="touchUpInside" id="XeY-T6-56G"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kPl-8W-0h6">
+                                <rect key="frame" x="125" y="427" width="67" height="30"/>
+                                <state key="normal" title="Start ASR"/>
+                                <connections>
+                                    <action selector="startASRClicked:" destination="whP-gf-Uak" eventType="touchUpInside" id="YVY-ad-uvp"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Vj-Bj-SgP">
+                                <rect key="frame" x="118" y="473" width="80" height="30"/>
+                                <state key="normal" title="Use Record"/>
+                                <connections>
+                                    <action selector="useRecordClicked:" destination="whP-gf-Uak" eventType="touchUpInside" id="OVf-rk-k9t"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="jNc-Eg-Ego" secondAttribute="trailing" id="40e-Ls-WwT"/>
+                            <constraint firstItem="3Vj-Bj-SgP" firstAttribute="top" secondItem="kPl-8W-0h6" secondAttribute="bottom" constant="16" id="800-Pe-HgB"/>
+                            <constraint firstItem="IjG-8S-6tU" firstAttribute="leading" secondItem="TpU-gO-2f1" secondAttribute="leadingMargin" constant="40" id="9RB-j6-IaU"/>
+                            <constraint firstItem="kPl-8W-0h6" firstAttribute="centerY" secondItem="gPw-LM-Qcp" secondAttribute="centerY" id="BJ1-Jk-7fg"/>
+                            <constraint firstItem="jNc-Eg-Ego" firstAttribute="leading" secondItem="TpU-gO-2f1" secondAttribute="leadingMargin" id="Gsf-0G-zWH"/>
+                            <constraint firstItem="3Vj-Bj-SgP" firstAttribute="centerX" secondItem="kPl-8W-0h6" secondAttribute="centerX" id="IBj-F9-ped"/>
+                            <constraint firstItem="kPl-8W-0h6" firstAttribute="centerX" secondItem="gPw-LM-Qcp" secondAttribute="centerX" id="Tb0-S9-FsV"/>
+                            <constraint firstItem="gPw-LM-Qcp" firstAttribute="centerY" secondItem="IjG-8S-6tU" secondAttribute="centerY" id="Tdp-HA-O9r"/>
+                            <constraint firstItem="IjG-8S-6tU" firstAttribute="top" secondItem="jNc-Eg-Ego" secondAttribute="bottom" constant="120" id="gG1-y0-MRR"/>
+                            <constraint firstItem="jNc-Eg-Ego" firstAttribute="top" secondItem="DBc-hb-vU6" secondAttribute="bottom" constant="20" id="hGB-4x-RbR"/>
+                            <constraint firstItem="mgq-f2-1Qr" firstAttribute="top" secondItem="jNc-Eg-Ego" secondAttribute="bottom" constant="360" id="lGj-Il-Iab"/>
+                            <constraint firstItem="ZU0-yc-OLB" firstAttribute="leading" secondItem="gPw-LM-Qcp" secondAttribute="trailing" constant="40" id="opA-dD-f9u"/>
+                            <constraint firstItem="gPw-LM-Qcp" firstAttribute="leading" secondItem="IjG-8S-6tU" secondAttribute="trailing" constant="40" id="rNx-Xd-zoP"/>
+                            <constraint firstItem="ZU0-yc-OLB" firstAttribute="centerY" secondItem="gPw-LM-Qcp" secondAttribute="centerY" id="rbN-oL-AQA"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="cancelBtn" destination="ZU0-yc-OLB" id="eKB-IP-6c0"/>
+                        <outlet property="startASRBtn" destination="kPl-8W-0h6" id="niv-pn-35v"/>
+                        <outlet property="stopASRBtn" destination="gPw-LM-Qcp" id="E9a-W6-cXd"/>
+                        <outlet property="textField" destination="jNc-Eg-Ego" id="cjS-hA-ymX"/>
+                        <outlet property="ttsBtn" destination="IjG-8S-6tU" id="I6o-1B-ciU"/>
+                        <outlet property="useRecordBtn" destination="3Vj-Bj-SgP" id="2aU-cN-03y"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tc2-Qw-aMS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="305" y="433"/>
+            <point key="canvasLocation" x="188.5" y="496.5"/>
         </scene>
     </scenes>
+    <simulatedMetricsContainer key="defaultSimulatedMetrics">
+        <simulatedStatusBarMetrics key="statusBar"/>
+        <simulatedOrientationMetrics key="orientation"/>
+        <simulatedScreenMetrics key="destination" type="retina4_7.fullscreen"/>
+    </simulatedMetricsContainer>
 </document>
